# Framework

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  BPFConfig.cmake  CMakeLists.Global.txt  CMakeLists.txt  CPackConfig.cmake  Deploy.py  LICENSE.md  LICENSE.txt  README.md  README.txt  Version.cmake  lgtm.yml
Base/: CMakeLists.txt
Base/include/Framework/: API.hpp  Api.hpp  Array.hpp  Array.impl.hpp  ArrayList.hpp  ArrayList.impl.hpp  BaseConvert.hpp  BaseConvert.impl.hpp  BinUtils.hpp  Cast.hpp  Color.hpp  Delegate.hpp  Dynamic.hpp  EvalException.hpp  Event.hpp  Exception.hpp  Hash.Base.hpp  Hash.hpp  HashMap.hpp  HashMap.impl.hpp  IndexException.hpp  Iterator.hpp  List.hpp  Map.impl.hpp  MathEval.hpp  MathEval.impl.hpp  Name.hpp  Object.hpp  ParseException.hpp  Path.hpp  PriorityQueue.hpp  PriorityQueue.impl.hpp  Profiler.hpp  Random.hpp  RuntimeException.hpp  Scalar.hpp  String.hpp  Stringifier.Base.hpp  Stringifier.Color.hpp  Tuple.hpp  (+2 more)
Base/include/Framework/Collection/: Array.Iterator.hpp  Array.hpp  Array.impl.hpp  ArrayList.hpp  ArrayList.impl.hpp  HashMap.Iterator.hpp  HashMap.hpp  HashMap.impl.hpp  Iterator.hpp  List.Iterator.hpp  List.hpp  List.impl.hpp  Map.Iterator.hpp  Map.hpp  Map.impl.hpp  PriorityQueue.hpp  PriorityQueue.impl.hpp  Queue.hpp  Queue.impl.hpp  Stack.hpp  Stack.impl.hpp  StackException.hpp  Stringifier.Array.hpp  Stringifier.ArrayList.hpp  Stringifier.Collection.hpp  Stringifier.HashMap.hpp  Stringifier.List.hpp  Stringifier.Map.hpp  Utility.hpp
Base/include/Framework/IO/: BinaryReader.hpp  BinaryWriter.hpp  ByteBuf.hpp  Console.hpp  ConsoleReader.hpp  ConsoleWriter.hpp  DynamicByteBuf.hpp  ECharacterEncoding.hpp  EConsoleColor.hpp  EConsoleStream.hpp  EStringEncoder.hpp  EStringSerializer.hpp  File.hpp  FileStream.hpp  FileSystem.hpp  IDataInputStream.hpp  IDataOutputStream.hpp  IInputStream.hpp  IOException.hpp  IOutputStream.hpp  MemoryMapper.hpp  Stream.hpp  Stringifier.File.hpp  Stringifier.IO.hpp  TextReader.hpp  TextWriter.hpp
Base/include/Framework/Json/: Json.hpp  JsonException.hpp  JsonParseException.hpp  Lexer.hpp  Parser.hpp  Stringifier.Json.hpp  Writer.hpp
Base/include/Framework/Log/: DefaultLogger.hpp  ELogLevel.hpp  FileLogger.hpp  ILogAdapter.hpp  ILogHandler.hpp  Logger.hpp
Base/include/Framework/Logging/: DefaultLogger.hpp  FileLogger.hpp
Base/include/Framework/Math/: BoundingBox.hpp  Color.hpp  IncompatibleMatrixSizeException.hpp  Math.hpp  MathUtils.hpp  Matrix.hpp  Matrix.impl.hpp  Matrix2.hpp  Matrix3.hpp  Matrix3.impl.hpp  Matrix4.hpp  NonInvertibleMatrixException.hpp  NonSquareMatrixException.hpp  Polygon.hpp  Polygon2.hpp  Polygon2.impl.hpp  Polygon2D.hpp  Polygon2D.impl.hpp  Polygon3.hpp  Polygon3.impl.hpp  Polygon3D.hpp  Polygon3D.impl.hpp  Quaternion.hpp  Quaternion.impl.hpp  Random.hpp  Stringifier.Color.hpp  Stringifier.Matrix.hpp  Stringifier.Quaternion.hpp  Stringifier.Vector.hpp  Transform.hpp  Transform2.hpp  Transform2.impl.hpp  Transform2D.hpp  Transform2D.impl.hpp  Transform3.hpp  Transform3.impl.hpp  Transform3D.hpp  Transform3D.impl.hpp  Triangle.hpp  Vector.hpp  (+13 more)
Base/include/Framework/Memory/: ClassCastException.hpp  IObjectConstructor.hpp  MemUtils.hpp  Memory.Hash.hpp  Memory.hpp  MemoryException.hpp  Object.hpp  ObjectConstructor.hpp  ObjectFactory.hpp  ObjectPtr.hpp  RawMemberFunction.hpp  SharedPtr.hpp  SharedPtr.impl.hpp  UniquePtr.hpp  UniquePtr.impl.hpp  Utility.hpp  WeakPtr.hpp  WeakPtr.impl.hpp
Base/include/Framework/Network/: Network.hpp
Base/include/Framework/System/: Application.hpp  DateTime.hpp  EntryPoint.hpp  IApplication.hpp  IModuleInterface.hpp  IThreadRunnable.hpp  Module.hpp  ModuleException.hpp  ModuleInterface.hpp  ModuleManager.hpp  ModuleManager.impl.hpp  Mutex.hpp  OSException.hpp  Paths.hpp  Platform.hpp  Plugin.hpp  PluginInterface.hpp  PluginLoader.hpp  PluginLoader.impl.hpp  Process.hpp  ScopeLock.hpp  Stringifier.DateTime.hpp  Stringifier.System.hpp  Thread.hpp  ThreadManager.hpp  ThreadPool.hpp  TimeSpan.hpp  Timer.hpp  TypeExpander.hpp  UnixApp.hpp  WindowsApp.hpp
Base/src/Framework/: Color.cpp  Dynamic.cpp  Exception.cpp  IndexException.cpp  Name.cpp  Object.cpp  Profiler.cpp  Random.cpp  RuntimeException.cpp  Scalar.cpp  String.cpp
Base/src/Framework/IO/: BinaryReader.cpp  BinaryWriter.cpp  ByteBuf.cpp  Console.cpp  ConsoleReader.cpp  ConsoleWriter.cpp  DynamicByteBuf.cpp  File.cpp  FileStream.cpp  MemoryMapper.cpp  OSPrivate.cpp  OSPrivate.hpp  Stream.cpp  TextReader.cpp  TextWriter.cpp
Base/src/Framework/Json/: Json.cpp  JsonParseException.cpp  Lexer.cpp  Parser.cpp  Writer.cpp
CMakes/: Base.cmake  (+6 more)
Compression/: CMakeLists.in.txt  CMakeLists.txt
Tests/: CMakeLists.in.txt  CMakeLists.txt  LICENSE.md  README.md
Tests/src/: Array.cpp  ArrayDynamic.cpp  ArrayList.cpp  ArrayStatic.cpp  BaseConvert.cpp  BinaryReadWrite.cpp  BoundingBox.cpp  ByteBuf.cpp  Compression.cpp  DateTime.cpp  Delegate.cpp  Dynamic.cpp  Event.cpp  File.cpp  FileStream.cpp  HashMap.cpp  JSON.cpp  Json.cpp  List.cpp  LowLevelMain.cpp  Map.cpp  Math.cpp  MathEval.cpp  Matrix.cpp  MatrixDynamic.cpp  MatrixStatic.cpp  MemoryMapper.cpp  Name.cpp  Platform.cpp  PriorityQueue.cpp  Quaternion.cpp  Queue.cpp  RuntimeException.cpp  Scalar.cpp  Stack.cpp  String.cpp  Thread.cpp  TimeSpan.cpp  Timer.cpp  Transform2.cpp  (+8 more)
Tests/src/Collection/: ArrayDynamic.cpp  ArrayList.cpp  ArrayStatic.cpp  HashMap.cpp  List.cpp  Map.cpp  PriorityQueue.cpp  Queue.cpp  Stack.cpp
Tests/src/IO/: BinaryReadWrite.cpp  ByteBuf.cpp  Console.cpp  ConsoleWriter.cpp  File.cpp  FileStream.cpp  MemoryMapper.cpp  TextReadWrite.cpp
Tests/src/Json/: Json.cpp  JsonWriter.cpp
Tests/src/Log/: Logger.cpp
Tests/src/Math/: BoundingBox.cpp  Color.cpp  Math.cpp  MatrixDynamic.cpp  MatrixStatic.cpp  Polygon2.cpp  Polygon3.cpp  Quaternion.cpp  Transform2.cpp  Transform3.cpp  VectorDynamic.cpp  VectorStatic.cpp
Tests/src/Memory/: Casting.cpp  ObjectConstructor.cpp
Tests/src/System/: Application.cpp  DateTime.cpp  Platform.cpp  Plugins.cpp  Process.cpp  Thread.cpp  ThreadPool.cpp  TimeSpan.cpp  Timer.cpp
(+290 files in other folders)
